chore(brand-band): Add docblocks and tests (#2898)
* Testing

* Add back examples

* chore(brand-band): Add tests

* Fix imports

--- a/packages/design-system/ui/components/chat/docs.mdx
+++ b/packages/design-system/ui/components/chat/docs.mdx
@@ -1,4 +1,5 @@
-import {CodeView, CodeBlock} from '../../../shared/components/CodeView';
+import CodeView from '../../../shared/components/CodeView';
+import CodeBlock from '../../../shared/components/CodeBlock';
 import Example from '../../../shared/components/Example';
 import Blockquote from '../../../shared/components/Blockquote';
 import TableOfContents from '../../../shared/components/TableOfContents';
