--- a/packages/design-system/ui/utilities/layout/docs.mdx
+++ b/packages/design-system/ui/utilities/layout/docs.mdx
@@ -1,4 +1,4 @@
-import { CodeView } from '../../../shared/components/CodeView';
+import CodeView from '../../../shared/components/CodeView';
 import TableOfContents from '../../../shared/components/TableOfContents';
 import { Magnet } from './';
 import Example from '../../../shared/components/Example';
