--- a/packages/design-system/ui/utilities/margin/docs.mdx
+++ b/packages/design-system/ui/utilities/margin/docs.mdx
@@ -1,5 +1,5 @@
 import Margin from './docs/Margin';
-import { CodeView } from '../../../shared/components/CodeView';
+import CodeView from '../../../shared/components/CodeView';
 import TableOfContents from '../../../shared/components/TableOfContents';
 prop tableOfContentsData
 
