feat(documentation): Add ability to toggle code blocks (#2902)
* feat(documentation): Add ability to toggle code blocks

* Cleanup

* Remove console logs

* Cleanup

* Update snapshot refs

--- a/packages/design-system/ui/components/badges/docs.mdx
+++ b/packages/design-system/ui/components/badges/docs.mdx
@@ -10,7 +10,7 @@ Badges are labels which hold small amounts of information.
 
 <TableOfContents data={tableOfContentsData} />
 
-<CodeView>
+<CodeView toggleCode={false}>
   <Badge>I am Badge</Badge>
 </CodeView>
 
