--- a/packages/design-system/ui/components/chat/docs.mdx
+++ b/packages/design-system/ui/components/chat/docs.mdx
@@ -80,7 +80,7 @@ A chat consists of an unordered list of possible chat items, wrapped in a `secti
   The <code className="doc">log</code> role has an implicit <code className="doc">aria-live</code> property value of <code className="doc">polite</code>, meaning that it comes for free. It also has an implicit <code className="doc">aria-relevant</code> property value of <code className="doc">additions text</code>. Together this means any additional text, or chat items added to the list will automatically be politely announced by a screen reader
 </Blockquote>
 
-<CodeBlock>
+<CodeBlock toggleCode={false}>
   <Chat>
     <ChatList>
       <ChatListItem />
