--- a/packages/design-system/ui/utilities/layout/docs.mdx
+++ b/packages/design-system/ui/utilities/layout/docs.mdx
@@ -26,7 +26,7 @@ If you need a card-like component to appear flush to the card-like component bel
 <div className="slds-grid slds-grid_pull-padded slds-wrap">
   <div className="slds-col slds-size_1-of-1 slds-large-size_1-of-2 slds-p-horizontal_medium">
     <strong>Before</strong>
-    <CodeView>
+    <CodeView toggleCode={false}>
       <div>
         <Magnet />
         <Magnet />
@@ -35,7 +35,7 @@ If you need a card-like component to appear flush to the card-like component bel
   </div>
   <div className="slds-col slds-size_1-of-1 slds-large-size_1-of-2 slds-p-horizontal_medium">
     <strong>After</strong>
-    <CodeView>
+    <CodeView toggleCode={false}>
       <div>
         <Magnet className="slds-has-bottom-magnet" />
         <Magnet className="slds-has-top-magnet" />
