fix(chat): sneak peak is now sneak peek w/breaking change (#3004)
* fix(chat): sneak peak is now sneak peek

Remove typo from chat component docs and JS, but it still remains in the CSS

* fix(chat): sneak peak is now sneak peek

CSS classes now reference sneak-peek instead of sneak-peak

BREAKING CHANGE: (class name) 'slds-chat-message__text-sneak-peak' is now 'slds-chat-message__text-sneak-peek'

* fix(chat): update snapshot test

* fix(chat): preserve both css classes for backwards compatibility

--- a/packages/design-system/ui/components/chat/docs.mdx
+++ b/packages/design-system/ui/components/chat/docs.mdx
@@ -270,15 +270,15 @@ Whilst chatting with customers, agents can see when a customer is typing a respo
   </Chat>
 </CodeView>
 
-#### Sneak peak
+#### Sneak peek
 
-We can take that experience one step further when the sneak peak feature is enabled. This allows agents to see what customers are typing in real time, as they type it.
+We can take that experience one step further when the sneak peek feature is enabled. This allows agents to see what customers are typing in real time, as they type it.
 
 <Blockquote
   header="aria-hidden"
   type="a11y"
 >
-  When the sneak peak feature is active, we take care to try and reduce the verbosity a screen reader user will encounter. As they will hear the final message once it is typed, we have found it is preferred to use <code className="doc">aria-hidden="true"</code> on the text they are currently typing, to reduce noise.
+  When the sneak peek feature is active, we take care to try and reduce the verbosity a screen reader user will encounter. As they will hear the final message once it is typed, we have found it is preferred to use <code className="doc">aria-hidden="true"</code> on the text they are currently typing, to reduce noise.
 </Blockquote>
 
 
@@ -288,7 +288,7 @@ We can take that experience one step further when the sneak peak feature is enab
       <ChatListItem type="inbound">
         <ChatMessage>
           <ChatAvatar initials="TW" name="Taylor Watson-Rice" />
-          <ChatMessageBody isTyping hasSneakPeak type="inbound">
+          <ChatMessageBody isTyping hasSneakPeek type="inbound">
             Hi, my Alexa only spe
           </ChatMessageBody>
         </ChatMessage>
