chore(alert): Save doc block tests and rename tests (#3042)

--- a/packages/design-system/ui/components/alert/docs.mdx
+++ b/packages/design-system/ui/components/alert/docs.mdx
@@ -16,7 +16,7 @@ Alerts
 
 Use the info alert when notifying the user of neutral information about the system.
 
-<Example title="Informational alert">
+<Example title="Alert Informational">
   <CodeView>
     <Alert type="info">
       <UtilityIcon
@@ -53,7 +53,7 @@ Use the info alert when notifying the user of neutral information about the syst
 
 Use the warning variant to warn the user about important system information that deserves caution.
 
-<Example title="Warning alert">
+<Example title="Alert Warning">
   <CodeView>
     <Alert type="warning">
       <UtilityIcon
@@ -74,7 +74,7 @@ Use the warning variant to warn the user about important system information that
 
 Use the error variant when you need to alert the user about an error in the system that needs immediate attention.
 
-<Example title="Error alert">
+<Example title="Alert Error">
   <CodeView>
     <Alert type="error">
       <UtilityIcon
@@ -95,7 +95,7 @@ Use the error variant when you need to alert the user about an error in the syst
 
 Use the offline alert to let the user know that they are not connected to the internet.
 
-<Example title="Offline alert">
+<Example title="Alert Offline">
   <CodeView>
     <Alert type="offline">
       <UtilityIcon
